add git workflows
