# ams-integrator/api/src/main/java/de/convit/microservice/amsintegrator/domain/model/AMSProvider.java
@@ -1,0 +1,15 @@
+package de.convit.microservice.amsintegrator.domain.model;
+
+import lombok.Getter;
+
+@Getter
+public enum AMSProvider {
+    AEM("Adobe Experience Manager"),;
+
+    private final String name;
+
+    AMSProvider(String name) {
+        this.name = name;
+    }
+
+}
