# ams-integrator/server/src/main/java/de/convit/microservice/amsintegrator/Application.java
@@ -1,22 +1,12 @@
-package de.convit.microservice;
+package de.convit.microservice.amsintegrator;
 
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.cache.annotation.EnableCaching;
-import org.springframework.data.jpa.repository.config.EnableJpaAuditing;
-import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
-import org.springframework.jms.annotation.EnableJms;
 import org.springframework.scheduling.annotation.EnableScheduling;
 
-@EnableJms
 @EnableCaching
 @EnableScheduling
-@EnableJpaAuditing
-@EnableJpaRepositories(
-        basePackages = {
-                "de.convit.microservice.domain.*"
-        }
-)
 @SpringBootApplication
 public class Application {
 
